--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
           <tr>
             <td>#999-32ac</td>
             <td>First Name</td>
-            <td>13 May, 2013</td>
+            <td>13th May, 2013</td>
             <td>999 Spruce Lane, Somewhere, CA 94101</td>
           </tr>
           <tr>
