--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
           <li> <a href="#" title="Sign Up">Sign Up</a> </li>
           <li> <a href="#" title="Contact">Contact</a> </li>
           <li> <a href="#" title="Careers">Careers</a> </li>
-        </ul>
+          <li> <a hred="#" title="Login" >Login</a> </li>
+         </ul>
       </nav>
     </header>
 
     <section>
-      <h>Headings &amp; Copy</h1>
+      <h1>Headings &amp; Copy</h1>
       <h1>First Header h1</h1>
       <p>
         At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
@@ -132,18 +133,10 @@
       </ol>
       <h2>Definition list</h2>
       <dl>
-        <dt>
-        Kick
-        </dt>
-        <dd>
-        808
-        </dd>
-        <dt>
-        Snare
-        </dt>
-        <dd>
-        909
-        </dd>
+        <dt>Kick</dt>
+        <dd>808</dd>
+        <dt>Snare</dt>
+        <dd>909</dd>
       </dl>
       <dl>
         <dt> Maine </dt>
