--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li> <a href="#" title="Home">Home</a> </li>
           <li> <a href="#" title="About">About</a> </li>
           <li> <a href="#" title="Sign Up">Sign Up</a> </li>
-          <li> <a href="#" title="Contact">Contact</a> </li>
+          <li> <a href="#" title="Contact">Contact Us</a> </li>
           <li> <a href="#" title="Careers">Careers</a> </li>
         </ul>
       </nav>
