--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Set the title of your site here -->
     <title> HTML Patterns </title>
 
     <meta name="author" content="mrmrs">
     <meta name="description" content="Common HTML patterns">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+   
     <!-- Link to your stylesheet here 
     <link rel="stylesheet" href="css/i.css">
 
@@ -111,8 +110,7 @@
     </section>
     <hr />
     <section>
-      <h1>Lists</h1>
-      <h2>Unordered list</h2>
+      <h1>Fruits</h1>
       <ul>
         <li>Orange</li>
         <li>Apple</li>
@@ -121,7 +119,7 @@
         <li>Blueberry</li>
         <li>Cherry</li>
       </ul>
-      <h2>Ordered list</h2>
+      <h2>Position</h2>
       <ol>
         <li>First</li>
         <li>Second</li>
