--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     <section>
       <h1>Footer</h1>
       <footer>
-        <p>Copyright 2013. Made with love by <a href="http://mrmrs.cc" title="MRMRS - Designer">mrmrs</a>.</p>
+        <p>Copyright 2013. Made with love by <a href="http://mrmrs.cc" title="MRMRS - Designer" target="_blank">mrmrs</a>.</p>
         <ul>
            <li>
              <a href="#">Home</a>
@@ -325,19 +325,19 @@
         </ul>
         <ul>
            <li>
-             <a href="http://twitter.com" title=" on Twitter">Twitter</a>
+             <a href="https://twitter.com" title=" on Twitter">Twitter</a>
            </li>
            <li>
-             <a href="http://pinterest.com" title=" on Pinterest">Pinterest</a>
+             <a href="https://pinterest.com" title=" on Pinterest">Pinterest</a>
            </li>
            <li>
-             <a href="http://instagram.com" title=" on Instagram">Instagram</a>
+             <a href="https://instagram.com" title=" on Instagram">Instagram</a>
            </li>
            <li>
-             <a href="http://dribbbble.com" title=" on Dribbble">Dribbble</a>
+             <a href="https://dribbbble.com" title=" on Dribbble">Dribbble</a>
            </li>
            <li>
-             <a href="http://github.com" title=" on Github">Github</a>
+             <a href="https://github.com" title=" on Github">Github</a>
            </li>
         </ul>
       </footer>
@@ -457,7 +457,7 @@
     <section>
       <h1>Footer</h1>
       <footer>
-        <small>© 2014 Some company name</small>
+        <small>&copy; 2014 Some company name</small>
         <address>email@email.com</address>
       </footer>
     </section>
