--- a/index.html
+++ b/index.html
@@ -22,12 +22,30 @@
     <link rel="apple-touch-icon" sizes="144x144" href="touch-icon-ipad-retina-precomposed.png">
     -->
   </head>
-
+  <style>
+  li
+  {
+    display: inline-block;
+  }
+  h1:hover
+  {
+    text-decoration: underline;
+    color: 3px solid black;
+  }
+  li
+  {
+    font-size: 30px;
+  }
+  p
+  {
+    font-size: 20px;
+  }
+  </style>
   <body>
 
     <header>
-      <h1>HTML</h1>
-      <h2>Every html element in one place. Just waiting to be styled.</h2>
+      <h1 align="center">HTML</h1>
+      <h2 align="center">Every html element in one place. Just waiting to be styled.</h2>
     </header>
 
 
@@ -45,7 +63,7 @@
     <header>
       <a href="" title="Site title"><h1>Site title</h1></a>
       <nav>
-        <ul>
+        <ul align="center">
           <li> <a href="#" title="Home">Home</a> </li>
           <li> <a href="#" title="About">About</a> </li>
           <li> <a href="#" title="Sign Up">Sign Up</a> </li>
