--- a/index.html
+++ b/index.html
@@ -45,13 +45,17 @@
     <header>
       <a href="" title="Site title"><h1>Site title</h1></a>
       <nav>
-        <ul>
-          <li> <a href="#" title="Home">Home</a> </li>
-          <li> <a href="#" title="About">About</a> </li>
-          <li> <a href="#" title="Sign Up">Sign Up</a> </li>
-          <li> <a href="#" title="Contact">Contact</a> </li>
-          <li> <a href="#" title="Careers">Careers</a> </li>
-        </ul>
+        
+           <a href="#" title="Home">Home</a> </li>
+                      &nbsp;
+           <a href="#" title="About">About</a> </li>
+                       &nbsp;
+           <a href="#" title="Sign Up">Sign Up</a> </li>
+                       &nbsp;
+           <a href="#" title="Contact">Contact</a> </li>
+                        &nbsp;
+           <a href="#" title="Careers">Careers</a> </li>
+        
       </nav>
     </header>
 
@@ -461,6 +465,11 @@
         <address>email@email.com</address>
       </footer>
     </section>
+<h1 id="emoji">
+		&#x1F60B
+		&#x1F60B
+		&#x1F60B
+	</h1>
   </body>
 </html>
 
