--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
               <option>Option 1</option>
               <option>Option 2</option>
               <option>Option 3</option>
+			  <option>Option 4</option>
+			  <option>Option 5</option>
             </select>
           </div>
 
@@ -229,6 +231,8 @@
               <li><label><input type="radio" /> Label 1</label></li>
               <li><label><input type="radio" /> Label 2</label></li>
               <li><label><input type="radio" /> Label 3</label></li>
+			  <li><label><input type="radio" /> Label 4</label></li>
+			  <li><label><input type="radio" /> Label 5</label></li>
             </ul>
           </div>
 
@@ -240,12 +244,12 @@
           <div>
             <label>Text area</label>
             <textarea></textarea>
-          </div>
+          </div><br>
 
           <div>
             <label><input type="checkbox" /> This is a checkbox.</label>
           </div>
-
+			
           <div>
             <input type="submit" value="Submit" />
           </div>
@@ -255,7 +259,6 @@
     </section>
     <section>
       <h1>Buttons</h1>
-      <button>A button</button>
       <button>A button</button>
       <button>A large button</button>
     </section>
