--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <button>A button</button>
       <button>A large button</button>
     </section>
-    <hr />
+    <hr>
     <section>
       <h1>An Example Article</h1>
       <article>
@@ -296,7 +296,7 @@
         </p>
       </article>
     </section>
-    <hr />
+    <hr>
 
     <section>
       <h1>Code examples</h1>
@@ -307,7 +307,7 @@
     </pre>
     </code>
   </section>
-    <hr />
+    <hr>
     <section>
       <h1>Footer</h1>
       <footer>
@@ -423,6 +423,7 @@
         Conforming user agent parsers must obey these rules for reasons of backward
         compatibility.
         -->
+      <hr style="height:2px;border-width:0;color:black;background-color:orange">
       <table>
         <caption>This is a caption for a table</caption>
         <thead>
