Added Dark Mode

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body {
   </head>
 
   <body>
-<button onclick="myFunction()">Toggle dark mode</button>
+<button onclick="myFunction()">Dark Mode</button>
 <script>
 function myFunction() {
    var element = document.body;
