--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta name="description" content="Common HTML patterns">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Link to your stylesheet here 
+    <!-- Link to your stylesheet here
     <link rel="stylesheet" href="css/i.css">
 
-    Favicons and Touch Device Icons 
+    Favicons and Touch Device Icons
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="touch-icon-iphone-precomposed.png">
     <link rel="apple-touch-icon" sizes="72x72"   href="touch-icon-ipad-precomposed.png">
@@ -176,6 +176,34 @@
       </dl>
     </section>
 
+    <section>
+      <h1>Media</h1>
+      <br>
+      <h2>video</h2>
+  <video width="400" controls>
+  <source src="mov_bbb.mp4" type="video/mp4">
+  <source src="mov_bbb.ogg" type="video/ogg">
+  Your browser does not support HTML video.
+</video>
+
+<p>
+Video courtesy of
+<a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
+</p>
+<br>
+<h2>Audio</h2>
+  <audio controls>
+    <source src="horse.ogg" type="audio/ogg">
+      <source src="horse.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+</audio>
+<br>
+<h2>You tube</h2>
+
+  <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+  </iframe>
+
+    </section>
     <section>
       <h1>Forms</h1>
       <form>
@@ -463,4 +491,3 @@
     </section>
   </body>
 </html>
-
