--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
       <nav>
         <ul>
           <li> <a href="#" title="Home">Home</a> </li>
+          &nbsp;
           <li> <a href="#" title="About">About</a> </li>
+          &nbsp;
           <li> <a href="#" title="Sign Up">Sign Up</a> </li>
+          &nbsp;
           <li> <a href="#" title="Contact">Contact</a> </li>
+          &nbsp;
           <li> <a href="#" title="Careers">Careers</a> </li>
         </ul>
       </nav>
