--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
   </head>
 
   <body>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div> 
 
     <header>
       <h1>HTML</h1>
