--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <!-- Set the title of your site here -->
-    <title> HTML Patterns </title>
+    <title> Learning HTML </title>
 
     <meta name="author" content="mrmrs">
     <meta name="description" content="Common HTML patterns">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Link to your stylesheet here 
+    <!-- Link to your stylesheet here
     <link rel="stylesheet" href="css/i.css">
 
-    Favicons and Touch Device Icons 
+    Favicons and Touch Device Icons
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="touch-icon-iphone-precomposed.png">
     <link rel="apple-touch-icon" sizes="72x72"   href="touch-icon-ipad-precomposed.png">
@@ -463,4 +463,3 @@
     </section>
   </body>
 </html>
-
