--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <!-- Set the title of your site here -->
-    <title> HTML Patterns </title>
+    <title> HTML  </title>
 
     <meta name="author" content="mrmrs">
     <meta name="description" content="Common HTML patterns">
