--- a/index.html
+++ b/index.html
@@ -324,6 +324,12 @@
            </li>
         </ul>
         <ul>
+          <li>
+             <a href="http://linkedin.com" title=" on Linkedin">Linkedin</a>
+           </li>
+          <li>
+             <a href="http://facebook.com" title=" on Facebook">Facebook</a>
+           </li>
            <li>
              <a href="http://twitter.com" title=" on Twitter">Twitter</a>
            </li>
