--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
           <div>
             <label for="url">URL Input</label>
-            <input type="url" placeholder="http://mrmrs.cc" />
+            <input type="url" placeholder="Enter your URL here(e.g. www.hrms1c.com)" />
           </div>
 
           <div>
