--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     -->
 
     <header>
-      <a href="" title="Site title"><h1>Site title</h1></a>
+      <a href="" title="WebSite title"><h1>WebSite title</h1></a>
       <nav>
         <ul>
           <li> <a href="#" title="Home">Home</a> </li>
