Created dropdown list with just html

--- a/index.html
+++ b/index.html
@@ -455,6 +455,23 @@
       </table>
     </section>
     <section>
+      <!-- Dropdown list with option with just html -->
+    <section>
+      <label for="countries">Country</label>
+        <input type="text" id="countries" placeholder="Search your Country..." list="country">
+        <datalist id="country">
+          <option value="India">India</option>
+          <option value="United States of America">United States of America</option>
+          <option value="Japan">Japan</option>
+          <option value="Italy">Italy</option>
+          <option value="Canada">Canada</option>
+          <option value="Spain">Spain</option>
+          <option value="France">France</option>
+          <option value="Mexico">Mexico</option>
+          <option value="Australia">Australia</option>
+          <option value="Switzerland">Switzerland</option>
+        </datalist>
+    </section>
       <h1>Footer</h1>
       <footer>
         <small>© 2014 Some company name</small>
