Add a comment to the h2 heading

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <header>
       <h1>HTML</h1>
+      <!-- This heading gives instruction on the type of heading that is needed -->
       <h2>Every html element in one place. Just waiting to be styled.</h2>
     </header>
 
