Add a background color using style tag

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <link rel="apple-touch-icon" sizes="144x144" href="touch-icon-ipad-retina-precomposed.png">
     -->
   </head>
-
+  <style>
+    body {
+      background: linear-gradient(0deg, rgba(243,245,243,1) 0%, rgba(162,189,198,1) 100%);
+    }
+  </style>
   <body>
 
     <header>
