Change the background color

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <style>
     body {
-      background: linear-gradient(0deg, rgba(243,245,243,1) 0%, rgba(162,189,198,1) 100%);
+      background: linear-gradient(0deg, rgba(243,245,243,1) 0%, rgba(255,250,154,1) 32%, rgba(227,191,183,1) 60%, rgba(162,189,198,1) 100%);
     }
   </style>
   <body>
