--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <header>
       <h1>HTML</h1>
-      <h2>Every html element in one place. Just waiting to be styled.</h2>
+      <h2>EVERY HTML ELEMENT IN ONE PLACE...WAITING TO BE STYLED..</h2>
     </header>
 
 
