Done with change in radio button functionality

--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
           <div>
             <label>Radio Buttons</label>
             <ul>
-              <li><label><input type="radio" /> Label 1</label></li>
-              <li><label><input type="radio" /> Label 2</label></li>
-              <li><label><input type="radio" /> Label 3</label></li>
+              <li><label><input type="radio" name="1"/> Label 1</label></li>
+              <li><label><input type="radio" name="1"/> Label 2</label></li>
+              <li><label><input type="radio" name="1"/> Label 3</label></li>
             </ul>
           </div>
 
