Solve radio input issue

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <section>
       <h1>Forms</h1>
-      <form>
+      <form action="">
         <fieldset>
           <!--
           Every fieldset must contain a legend. IE barfs if it's not there.
@@ -226,9 +226,9 @@
           <div>
             <label>Radio Buttons</label>
             <ul>
-              <li><label><input type="radio" /> Label 1</label></li>
-              <li><label><input type="radio" /> Label 2</label></li>
-              <li><label><input type="radio" /> Label 3</label></li>
+              <li><label><input type="radio" name="labels"/> Label 1</label></li>
+              <li><label><input type="radio" name="labels"/> Label 2</label></li>
+              <li><label><input type="radio" name="labels" /> Label 3</label></li>
             </ul>
           </div>
 
