cambio de color en el header h1

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <header>
       <h1>HTML</h1>
-      <h2>Every html element in one place. Just waiting to be styled.</h2>
+      <h2 style="color: darkgray;">Every html element in one place. Just waiting to be styled.</h2>
     </header>
 
 
